@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2009-07-01"
+#define RUBY_RELEASE_DATE "2009-07-03"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20090701
-#define RUBY_PATCHLEVEL 176
+#define RUBY_RELEASE_CODE 20090703
+#define RUBY_PATCHLEVEL 177
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2009
 #define RUBY_RELEASE_MONTH 7
-#define RUBY_RELEASE_DAY 1
+#define RUBY_RELEASE_DAY 3
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
